; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/arch/blackfin/kernel/extr_bfin_gpio.c_bfin_gpio_set_value.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/arch/blackfin/kernel/extr_bfin_gpio.c_bfin_gpio_set_value.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i8*, i8* }

@gpio_array = common dso_local global %struct.TYPE_2__** null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @bfin_gpio_set_value(i32 %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  store i32 %1, i32* %4, align 4
  %5 = load i32, i32* %4, align 4
  %6 = icmp ne i32 %5, 0
  br i1 %6, label %7, label %16

7:                                                ; preds = %2
  %8 = load i32, i32* %3, align 4
  %9 = call i8* @gpio_bit(i32 %8)
  %10 = load %struct.TYPE_2__**, %struct.TYPE_2__*** @gpio_array, align 8
  %11 = load i32, i32* %3, align 4
  %12 = call i64 @gpio_bank(i32 %11)
  %13 = getelementptr inbounds %struct.TYPE_2__*, %struct.TYPE_2__** %10, i64 %12
  %14 = load %struct.TYPE_2__*, %struct.TYPE_2__** %13, align 8
  %15 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %14, i32 0, i32 1
  store i8* %9, i8** %15, align 8
  br label %25

16:                                               ; preds = %2
  %17 = load i32, i32* %3, align 4
  %18 = call i8* @gpio_bit(i32 %17)
  %19 = load %struct.TYPE_2__**, %struct.TYPE_2__*** @gpio_array, align 8
  %20 = load i32, i32* %3, align 4
  %21 = call i64 @gpio_bank(i32 %20)
  %22 = getelementptr inbounds %struct.TYPE_2__*, %struct.TYPE_2__** %19, i64 %21
  %23 = load %struct.TYPE_2__*, %struct.TYPE_2__** %22, align 8
  %24 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %23, i32 0, i32 0
  store i8* %18, i8** %24, align 8
  br label %25

25:                                               ; preds = %16, %7
  ret void
}

declare dso_local i8* @gpio_bit(i32) #1

declare dso_local i64 @gpio_bank(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
